Alignment issues resoled

--- a/src/layout/PageLayout.css
+++ b/src/layout/PageLayout.css
@@ -6,6 +6,7 @@
 .logo {
   height: 64px;
   cursor: pointer;
+  position: relative;
 }
 
 .logo img {
